--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,41 @@
-version: "3.9"
-
 services:
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: backend-auction-challenge-mvp-app
-    ports:
-      - "3000:3000"
-    environment:
-      PORT: 3000
-      MONGO_URI: mongodb://mongo:27017/auction
-    depends_on:
-      - mongo
-    restart: unless-stopped
-
   mongo:
     image: mongo:7
-    container_name: backend-auction-challenge-mvp-mongo
+    command: ["mongod", "--replSet", "rs0", "--bind_ip_all"]
     ports:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
-    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "mongosh", "--quiet", "mongodb://localhost:27017/admin", "--eval", "db.adminCommand('ping').ok"]
+      interval: 5s
+      timeout: 5s
+      retries: 20
+
+  mongo-init:
+    image: mongo:7
+    depends_on:
+      mongo:
+        condition: service_healthy
+    entrypoint: ["bash", "-lc"]
+    command: >
+      echo "[mongo-init] waiting for mongod";
+      until mongosh --quiet mongodb://mongo:27017/admin --eval "db.adminCommand({ping:1}).ok" | grep 1 >/dev/null; do sleep 1; done;
+      echo "[mongo-init] initiating rs0 (if needed)";
+      mongosh --quiet mongodb://mongo:27017/admin --eval "try { rs.status().ok } catch(e) { rs.initiate({_id: \"rs0\", members:[{_id:0, host:\"mongo:27017\"}]}) }";
+      echo "[mongo-init] done";
+    restart: "no"
+
+  app:
+    build: .
+    environment:
+      - PORT=3000
+      - MONGO_URI=mongodb://mongo:27017/auction?replicaSet=rs0
+    depends_on:
+      mongo-init:
+        condition: service_completed_successfully
+    ports:
+      - "3000:3000"
 
 volumes:
   mongo_data:
