--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "tsx watch server/src/app.ts",
     "build": "tsc -p tsconfig.json",
-    "start": "node --enable-source-maps dist/server/src/app.js",
+    "start": "node dist/server/src/app.js",
     "load": "tsx scripts/load.ts"
   },
   "dependencies": {
